--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,10 +1,10 @@
 //imports
-@import "secundarios/reset"; 
-@import"secundarios/cuerpos";
-@import"secundarios/contact";
-@import"secundarios/pro";
-@import"secundarios/nav";
-@import"secundarios/footer";
-@import"secundarios/extras";
-@import"secundarios/sed";
-@import"secundarios/mediaquerie.scss";
+@import "utillities/reset"; 
+@import"utillities/cuerpos";
+@import"utillities/contact";
+@import"utillities/pro";
+@import"utillities/nav";
+@import"utillities/footer";
+@import"utillities/extras";
+@import"utillities/sed";
+@import"utillities/mediaquerie.scss";
