--- a/sass/utillities/_extras.scss
+++ b/sass/utillities/_extras.scss
@@ -1,11 +1,11 @@
 /* estilos del h1 */
-body main h1 {
+.body main h1 {
     font-size: 2rem;
     text-align: center;
     margin: 2rem;
 }
 /*estilos de las imagenes*/
-body main img {
+.body main img {
     height: 12.5rem;
     width: 18.75rem;
 }
