--- a/sass/utillities/_footer.scss
+++ b/sass/utillities/_footer.scss
@@ -1,10 +1,12 @@
+/*variables*/
+@import "variables";
 /* estilo del footer */
 .footer {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: center;
-    background-color: #072849;
+    background-color: $colorFooter;
     padding: 10px;
     margin-top: 10px;
     color: white;
