--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,8 @@
       text-decoration: underline;
       transform: scale(1.08); }
   .body header nav div a img {
-    width: 100%;
-    height: 4rem;
-    margin-left: 10px; }
+    width: 8rem;
+    height: 4rem; }
 
 /*variables*/
 /* estilo del footer */
