--- a/sass/utillities/_nav.scss
+++ b/sass/utillities/_nav.scss
@@ -18,8 +18,7 @@
         }
     }
     div a img{
-        width: 100%;
-        height: 4rem;
-        margin-left: 10px;
-    }
+            width: 8rem;
+            height: 4rem;
+        }
 }
