--- a/css/style.css
+++ b/css/style.css
@@ -64,20 +64,21 @@
 /*variables*/
 /* estilos del nav */
 .body header nav {
-  display: block;
-  text-align: end;
-  background-color: #47b5ff; }
+  background-color: #47b5ff;
+  text-align: center; }
   .body header nav ul li {
     font-weight: bold;
     padding: 1rem;
     transition: 1s; }
     .body header nav ul li:hover {
       text-decoration: underline;
-      transform: scale(1.08); }
+      transform: scale(1.08);
+      color: #dff6ff; }
+    .body header nav ul li a {
+      color: #dff6ff; }
   .body header nav div a img {
-    width: 100%;
-    height: 4rem;
-    margin-left: 10px; }
+    width: 8rem;
+    height: 4rem; }
 
 /*variables*/
 /* estilo del footer */
@@ -114,8 +115,6 @@
 section div div {
   display: inline;
   text-align: center; }
-  section div div h2 {
-    color: black; }
 
 /* estilos de la mediaquerie */
 @media screen and (min-width: 600px) {
