--- a/sass/utillities/_variables.scss
+++ b/sass/utillities/_variables.scss
@@ -1,4 +1,3 @@
-
-$colorFondo:rgb(223, 246, 255);
-$colorFooter:rgb(6, 40, 61);
-$colorNav:rgb(71, 181, 255);
+// medidas
+$medida-1:1rem;
+$medida-2;2rem;
