--- a/sass/utillities/_cuerpos.scss
+++ b/sass/utillities/_cuerpos.scss
@@ -1,7 +1,7 @@
-/*variables*/
-@import"variables";
+// listas
+@import"listas";
 /* estilo del body */
 .body {
-    background-color: $colorFondo;
+    background-color: nth($colores, 3);
     font-family: Futura, sans-serif;
 }
