--- a/sass/utillities/_footer.scss
+++ b/sass/utillities/_footer.scss
@@ -1,12 +1,12 @@
-/*variables*/
-@import "variables";
+// variables
+@import "listas";
 /* estilo del footer */
 .footer {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: column;
     align-items: center;
-    background-color: $colorFooter;
+    background-color: nth($colores, 2);
     padding: 10px;
     margin-top: 10px;
     color: white;
