--- a/sass/utillities/_pro.scss
+++ b/sass/utillities/_pro.scss
@@ -14,7 +14,7 @@
     border: 0.3rem solid black;
     overflow: auto;
     transition: 1s;
-    margin-top: 2rem;
+    margin-top: $medida-2;
     h2 {
         padding: $medida-1;
     }
