--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
       border: 1px solid black;
       background-color: #f8eaea;
       font-size: 25px;
-      padding: 0.5rem;
+      padding: 2rem;
       text-align: center; }
     .contacto__formulario .contacto__formulario__caja section {
       margin: 2rem;
@@ -84,13 +84,13 @@
   flex-direction: column;
   align-items: center;
   background-color: #06283d;
-  padding: 10px;
-  margin-top: 10px;
+  padding: 1rem;
+  margin-top: 1rem;
   color: white;
   gap: 0.6rem; }
 
 .footer__subt {
-  font-size: 20px;
+  font-size: 1.5rem;
   font-weight: bold; }
 
 /* estilos del h1 */
@@ -164,4 +164,7 @@ section div div {
     width: 33.3%; }
   /* estilos del h1 */
   body main h1 {
-    font-size: 3rem; } }
+    font-size: 3rem; }
+  /*estilos del nav*/
+  #a {
+    font-size: 1rem; } }
