--- a/sass/utillities/_contact.scss
+++ b/sass/utillities/_contact.scss
@@ -1,9 +1,11 @@
+// variables
+@import"variables";
 /*estilo de contact*/
 
 .contacto__formulario {
     display: flex;
     justify-content: center;
-    margin: 5rem 1rem;
+    margin: 5rem $medida-1;
     .contacto__formulario__caja {
         background-color: white;
         border: 4px solid black;
@@ -12,13 +14,13 @@
             border: 1px solid black;
             background-color: rgb(248, 234, 234);
             font-size: 25px;
-            padding: 0.5rem;
+            padding: $medida-2;
             text-align: center;
         }    
         section {
-            margin: 2rem;
-            padding: 1rem;
-            gap: 1rem;
+            margin: $medida-2;
+            padding: $medida-1;
+            gap: $medida-1;
             font-size: larger;
         }
         .contacto__formulario__botones {
