--- a/sass/utillities/_footer.scss
+++ b/sass/utillities/_footer.scss
@@ -1,5 +1,6 @@
-// variables
+// variables y listas
 @import "listas";
+@import"variables";
 /* estilo del footer */
 .footer {
     display: flex;
@@ -7,13 +8,13 @@
     flex-direction: column;
     align-items: center;
     background-color: nth($colores, 2);
-    padding: 10px;
-    margin-top: 10px;
+    padding: $medida-1;
+    margin-top: $medida-1;
     color: white;
     gap: 0.6rem;
 }
 .footer__subt {
-    font-size: 20px;
+    font-size: $medida-1 + $medida-3;
     font-weight: bold;
 }
 
