--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,4 +1,4 @@
-//imports
+// hojas parciales
 @import "utillities/reset"; 
 @import"utillities/cuerpos";
 @import"utillities/contact";
@@ -8,3 +8,5 @@
 @import"utillities/extras";
 @import"utillities/sed";
 @import"utillities/mediaquerie.scss";
+@import"utillities/index.scss";
+
