--- a/sass/utillities/_contact.scss
+++ b/sass/utillities/_contact.scss
@@ -1,11 +1,12 @@
-// variables
+// variables y mixin
 @import"variables";
+@import"mixin";
 /*estilo de contact*/
 
 .contacto__formulario {
     display: flex;
     justify-content: center;
-    margin: 5rem $medida-1;
+    @include margen(5rem $medida-1, 0rem);
     .contacto__formulario__caja {
         background-color: white;
         border: 4px solid black;
@@ -13,13 +14,12 @@
         .contacto__formulario__titulo {
             border: 1px solid black;
             background-color: rgb(248, 234, 234);
-            font-size: 25px;
-            padding: $medida-2;
+            font-size: $medida-1 + $medida-3;
+            @include margen(0rem, $medida-2);
             text-align: center;
         }    
         section {
-            margin: $medida-2;
-            padding: $medida-1;
+            @include margen($medida-2, $medida-1);
             gap: $medida-1;
             font-size: larger;
         }
