--- a/sass/utillities/_nav.scss
+++ b/sass/utillities/_nav.scss
@@ -1,7 +1,7 @@
-// listas y variables
+// listas, variables y mixin
 @import "listas";
 @import"variables";
-
+@import"mixin";
 /* estilos del nav */
 .body header nav {
     background-color: nth($colores,1);
@@ -20,8 +20,7 @@
     }
     div{
         a img{
-            width: 8rem;
-            height: 4rem;
+            @include sizes(8rem, 4rem);
         }
     }
 }
