--- a/sass/utillities/_pro.scss
+++ b/sass/utillities/_pro.scss
@@ -1,5 +1,6 @@
-//variables
+//variables y mixin
 @import"variables";
+@import"mixin";
 /* estilo de productos */
 .contenedorpro {
     display: flex;
@@ -7,8 +8,7 @@
 }
 
 .contenedorpro__hijo {
-    margin: 0rem $medida-1;
-    padding: $medida-1 0rem;
+    @include margen(0rem $medida-1, $medida-1 0rem);
     width: auto;
     text-align: center;
     border: 0.3rem solid black;
@@ -20,17 +20,17 @@
     }
     p {
         font-weight: bold;
-        font-size: $medida-1 + 0.5rem;
+        font-size: $medida-1 + $medida-3;
         padding-bottom: $medida-1;
     }
     &:hover {
         transform: scale(1.08);
     }
     img {
-        width: 66.6%;
+        @include sizes(66.6%, 12.5rem)
     }
     span {
-        padding: 0.5rem;
+        padding: $medida-3;
     }
 }
 
