--- a/sass/secundarios/_contact.scss
+++ b/sass/secundarios/_contact.scss
@@ -1,6 +1,6 @@
 // variables y mixin
-@import"variables";
-@import"mixin";
+@import"../utillities/variables";
+@import"../utillities/mixin";
 /*estilo de contact*/
 
 .contacto__formulario {
