--- a/sass/secundarios/_cuerpos.scss
+++ b/sass/secundarios/_cuerpos.scss
@@ -1,5 +1,5 @@
 // listas
-@import"listas";
+@import"../utillities/listas";
 /* estilo del body */
 .body {
     background-color: nth($colores, 3);
