--- a/sass/secundarios/_pro.scss
+++ b/sass/secundarios/_pro.scss
@@ -1,6 +1,8 @@
-//variables y mixin
-@import"variables";
-@import"mixin";
+// imports
+@import"../utillities/variables";
+@import"../utillities/extend";
+@import"../utillities/mixin";
+@import"../utillities/listas";
 /* estilo de productos */
 .contenedorpro {
     display: flex;
