--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,12 +1,13 @@
 // hojas parciales
-@import "utillities/reset"; 
-@import"utillities/cuerpos";
-@import"utillities/contact";
-@import"utillities/pro";
-@import"utillities/nav";
-@import"utillities/footer";
-@import"utillities/extras";
-@import"utillities/sed";
-@import"utillities/mediaquerie.scss";
-@import"utillities/index.scss";
+@import "secundarios/reset"; 
+@import"secundarios/cuerpos";
+@import"secundarios/contact";
+@import"secundarios/pro";
+@import"secundarios/nav";
+@import"secundarios/footer";
+@import"secundarios/extras";
+@import"secundarios/sed";
+@import"secundarios/index";
+@import"secundarios/nos";
+@import"secundarios/mediaquerie.scss";
 
