--- a/sass/secundarios/_extras.scss
+++ b/sass/secundarios/_extras.scss
@@ -1,6 +1,6 @@
 // variables y mixin
-@import"variables";
-@import"mixin";
+@import"../utillities/variables";
+@import"../utillities/mixin";
 /* estilos del h1 */
 .body main h1 {
     font-size: $medida-2;
