--- a/sass/utillities/_extend.scss
+++ b/sass/utillities/_extend.scss
@@ -8,5 +8,6 @@
         grid-template-columns: 1fr 1fr;
         align-items: center;
         text-align: center;  
+        justify-content: center;
     }
 }
