--- a/sass/secundarios/_nos.scss
+++ b/sass/secundarios/_nos.scss
@@ -15,11 +15,11 @@
     .contenedornos__img{
         padding: $medida-1;
     }
-    contenedornos__div__h1{
+    .contenedornos__div__h1{
         font-size: $medida-2;
         padding: $medida-1;
     }
-    contenedornos__div__p1{
+    .contenedornos__div__p1{
         display: none;
     }
 }
