--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,11 @@
   .contacto__formulario .contacto__formulario__caja {
     background-color: white;
     border: 4px solid black;
-    background-color: #f8eaea; }
+    background-color: #daf1fa; }
     .contacto__formulario .contacto__formulario__caja .contacto__formulario__titulo {
       border: 1px solid black;
-      background-color: #f8eaea;
+      font-weight: bold;
+      background-color: #daf1fa;
       font-size: 1.5rem;
       padding: 2rem;
       margin: 0rem;
@@ -121,10 +122,13 @@
   margin-top: 1rem;
   color: white;
   gap: 0.6rem; }
-
-.footer__subt {
-  font-size: 1.5rem;
-  font-weight: bold; }
+  .footer .footer__subt {
+    font-size: 1.5rem;
+    font-weight: bold; }
+  .footer div {
+    margin-bottom: 1rem; }
+    .footer div a {
+      margin: 0.5rem; }
 
 /* estilos del h1 */
 .body main h1 {
@@ -181,10 +185,10 @@ section div div {
     text-align: center; }
   .contenedornos .contenedornos__img {
     padding: 1rem; }
-  .contenedornos contenedornos__div__h1 {
+  .contenedornos .contenedornos__div__h1 {
     font-size: 2rem;
     padding: 1rem; }
-  .contenedornos contenedornos__div__p1 {
+  .contenedornos .contenedornos__div__p1 {
     display: none; }
 
 @media screen and (min-width: 600px) {
@@ -277,6 +281,9 @@ section div div {
       text-align: center;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-evenly; }
+      justify-content: space-evenly;
+      margin-bottom: 2rem; }
+    .contenedornos .contenedornos__div__h1 {
+      padding-top: 3.4rem; }
     .contenedornos .contenedornos__div__p1 {
       display: inline; } }
