--- a/sass/secundarios/_contact.scss
+++ b/sass/secundarios/_contact.scss
@@ -10,13 +10,15 @@
     .contacto__formulario__caja {
         background-color: white;
         border: 4px solid black;
-        background-color: rgb(248, 234, 234);
+        background-color: nth($colores,4);
         .contacto__formulario__titulo {
             border: 1px solid black;
-            background-color: rgb(248, 234, 234);
+            font-weight: bold;
+            background-color: nth($colores,4);
             font-size: $medida-1 + $medida-3;
             @include margen(0rem, $medida-2);
             text-align: center;
+
         }    
         section {
             @include margen($medida-2, $medida-1);
