--- a/sass/secundarios/_sed.scss
+++ b/sass/secundarios/_sed.scss
@@ -1,3 +1,6 @@
+//imports
+@import"../utillities/variables";
+@import"../utillities/mixin";
 /* estilos de sedes */
 .contenedorsed {
     display: none;
@@ -5,4 +8,10 @@
 section div div {
     display: inline;
     text-align: center;
+    img{
+        @include sizes(60%,13rem)
+    }
+}
+#p{
+    margin: $medida-3;
 }
