--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,12 @@
 section div div {
   display: inline;
   text-align: center; }
+  section div div img {
+    width: 60%;
+    height: 13rem; }
+
+#p {
+  margin: 0.5rem; }
 
 /*estilos del index*/
 .contenedorindex__logo {
@@ -210,7 +216,8 @@ section div div {
     border: 0.5rem solid black;
     grid-template-areas: "hijo1 hijo2" "hijo4 hijo3" "hijo5 hijo6"; }
     .contenedorsed div img {
-      width: 60%; }
+      width: 60%;
+      height: 13rem; }
   .contenedorsed__hijo1 {
     grid-area: hijo1;
     padding: 2rem;
