cambios en nav(boton y altura)

--- a/sass/secundarios/_mediaquerie.scss
+++ b/sass/secundarios/_mediaquerie.scss
@@ -83,6 +83,12 @@
     #a{
         font-size: $medida-1;
     }
+    #ul{
+        padding-left: 8rem;
+    }
+    .body header nav {
+        height: 5.8rem;
+    }
 
     /*estilos de index*/
 
