--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,13 @@
 /* estilos del nav */
 .body header nav {
   background-color: #47b5ff;
-  text-align: center; }
+  text-align: center;
+  height: auto; }
+  .body header nav .boton {
+    background-color: #319fe7;
+    width: 2rem;
+    height: 1rem;
+    border: 2px solid #06283d; }
   .body header nav ul li {
     font-weight: bold;
     padding: 1rem;
@@ -258,6 +264,10 @@ section div div {
   /*estilos del nav*/
   #a {
     font-size: 1rem; }
+  #ul {
+    padding-left: 8rem; }
+  .body header nav {
+    height: 5.8rem; }
   /*estilos de index*/
   .contenedorindex {
     grid-template-areas: "logo video" "h2 video" "p video"; }
