cambios en nav(boton y altura)

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@
     background-color: #319fe7;
     width: 2rem;
     height: 1rem;
-    border: 2px solid #06283d; }
+    border: 2px solid #0f496d; }
   .body header nav ul li {
     font-weight: bold;
     padding: 1rem;
