--- a/sass/utillities/_listas.scss
+++ b/sass/utillities/_listas.scss
@@ -3,4 +3,5 @@ $colores: rgb(71, 181, 255),
 rgb(6, 40, 61),
 rgb(223, 246, 255),
 rgb(218, 241, 250),
-rgb(49, 159, 231)
+rgb(49, 159, 231),
+rgb(15, 73, 109),
