--- a/css/style.css
+++ b/css/style.css
@@ -17,34 +17,19 @@
 /* estilo del body */
 .body {
   background-color: #dff6ff;
-  font-family: Futura, sans-serif; }
+  font-family: Futura,sans-serif; }
 
 /*estilo de contact*/
-.contacto__formulario {
+.main {
   display: flex;
-  justify-content: center;
-  padding: 0rem;
-  margin: 5rem 1rem; }
-  .contacto__formulario .contacto__formulario__caja {
-    background-color: white;
-    border: 4px solid black;
-    background-color: #daf1fa; }
-    .contacto__formulario .contacto__formulario__caja .contacto__formulario__titulo {
-      border: 1px solid black;
-      font-weight: bold;
-      background-color: #daf1fa;
-      font-size: 1.5rem;
-      padding: 2rem;
-      margin: 0rem;
-      text-align: center; }
-    .contacto__formulario .contacto__formulario__caja section {
-      padding: 1rem;
-      margin: 2rem;
-      gap: 1rem;
-      font-size: larger; }
-    .contacto__formulario .contacto__formulario__caja .contacto__formulario__botones {
-      display: flex;
-      justify-content: space-around; }
+  justify-content: center; }
+  .main .main__caja {
+    margin: 8rem;
+    width: 40rem;
+    height: auto;
+    border: 0.25rem solid #bad9e5; }
+    .main .main__caja div {
+      margin: 2rem; }
 
 @media screen and (min-width: 600px) {
   .contenedorsed, .contenedorindex {
@@ -98,7 +83,8 @@
 .body header nav {
   background-color: #47b5ff;
   text-align: center;
-  height: auto; }
+  height: auto;
+  text-transform: uppercase; }
   .body header nav .boton {
     background-color: #319fe7;
     width: 2rem;
@@ -196,7 +182,9 @@ section div div {
     padding: 1rem;
     text-align: center; }
   .contenedornos .contenedornos__img {
-    padding: 1rem; }
+    padding: 1rem;
+    width: auto;
+    height: 25rem; }
   .contenedornos .contenedornos__div__h1 {
     font-size: 2rem;
     padding: 1rem; }
