cambios en nav(boton y altura)

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 600px) {
-  .contenedorsed, .contenedorindex {
+  .contenedorindex {
     display: grid;
     margin: 3rem;
     row-gap: 1rem;
@@ -32,7 +32,7 @@
       margin: 2rem; }
 
 @media screen and (min-width: 600px) {
-  .contenedorsed, .contenedorindex {
+  .contenedorindex {
     display: grid;
     margin: 3rem;
     row-gap: 1rem;
@@ -70,7 +70,7 @@
     padding: 0.5rem; }
 
 @media screen and (min-width: 600px) {
-  .contenedorsed, .contenedorindex {
+  .contenedorindex {
     display: grid;
     margin: 3rem;
     row-gap: 1rem;
@@ -129,12 +129,11 @@
   margin: 2rem; }
 
 /* estilos de sedes */
-.contenedorsed {
-  display: none; }
-
 section div div {
   display: inline;
   text-align: center; }
+  section div div p {
+    display: none; }
   section div div img {
     width: 60%;
     height: 13rem; }
@@ -164,7 +163,7 @@ section div div {
     padding: 1rem; }
 
 @media screen and (min-width: 600px) {
-  .contenedorsed, .contenedorindex {
+  .contenedorindex {
     display: grid;
     margin: 3rem;
     row-gap: 1rem;
@@ -192,7 +191,7 @@ section div div {
     display: none; }
 
 @media screen and (min-width: 600px) {
-  .contenedorsed, .contenedorindex {
+  .contenedorindex {
     display: grid;
     margin: 3rem;
     row-gap: 1rem;
@@ -203,43 +202,7 @@ section div div {
 
 /* estilos de la mediaquerie */
 @media screen and (min-width: 600px) {
-  /* estilos de sed de mediquerie*/
-  .carrusel {
-    display: none; }
-  .contenedorsed {
-    border: 0.5rem solid black;
-    grid-template-areas: "hijo1 hijo2" "hijo4 hijo3" "hijo5 hijo6"; }
-    .contenedorsed div img {
-      width: 60%;
-      height: 13rem; }
-  .contenedorsed__hijo1 {
-    grid-area: hijo1;
-    padding: 2rem;
-    align-self: center; }
-  .contenedorsed__hijo2 {
-    grid-area: hijo2;
-    padding: 2rem; }
-    .contenedorsed__hijo2 h2 {
-      font-size: xx-large;
-      margin: 0.5rem; }
-  .contenedorsed__hijo3 {
-    grid-area: hijo3;
-    padding: 2rem; }
-  .contenedorsed__hijo4 {
-    grid-area: hijo4;
-    padding: 2rem; }
-    .contenedorsed__hijo4 h2 {
-      font-size: xx-large;
-      margin: 0.5rem; }
-  .contenedorsed__hijo5 {
-    grid-area: hijo5;
-    padding: 2rem; }
-  .contenedorsed__hijo6 {
-    grid-area: hijo6;
-    padding: 2rem; }
-    .contenedorsed__hijo6 h2 {
-      font-size: xx-large;
-      margin: 0.5rem; }
+  /* estilos de sedes*/
   /* estilos de Productos de mediaquerie*/
   .contenedorpro {
     justify-content: center;
