--- a/sass/secundarios/_pro.scss
+++ b/sass/secundarios/_pro.scss
@@ -13,7 +13,7 @@
     @include margen(0rem $medida-1, $medida-1 0rem);
     width: auto;
     text-align: center;
-    border: 0.3rem solid black;
+    border: 0.3rem solid nth($colores,7);
     overflow: auto;
     transition: 1s;
     margin-top: $medida-2;
