--- a/sass/secundarios/_sed.scss
+++ b/sass/secundarios/_sed.scss
@@ -2,14 +2,23 @@
 @import"../utillities/variables";
 @import"../utillities/mixin";
 /* estilos de sedes */
-section div div {
-    display: inline;
-    text-align: center;
-    p{
-        display: none;
-    }
-    img{
-        @include sizes(60%,13rem)
+section{
+    margin: 0rem;
+    div div {
+        display: inline;
+        text-align: center;
+        h2{
+            padding-top: $medida-1;
+        }
+        p{
+            display: none;
+        }
+        hr{
+            display: none;
+        }
+        img{
+            @include sizes(auto,13.5rem);
+        }
     }
 }
 #p{
