--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,17 @@
   font-size: 2rem;
   text-align: center;
   margin: 2rem;
-  text-decoration: underline #319fe7; }
+  text-decoration: underline #319fe7;
+  font-family: Tiemann,serif; }
+
+.body main h2 {
+  text-decoration: underline #319fe7;
+  font-family: Tiemann,serif; }
+
+.body main h3 {
+  margin-top: 2rem;
+  text-decoration: underline #319fe7;
+  font-family: Tiemann,serif; }
 
 /* estilos de sedes */
 section {
@@ -215,20 +225,6 @@ section {
 /* estilos de la mediaquerie */
 @media screen and (min-width: 600px) {
   /* estilos de sedes*/
-  section {
-    margin: 2rem 4rem 4rem 4rem; }
-    section div div {
-      text-align: center; }
-      section div div h2 {
-        padding-top: 2rem; }
-      section div div hr {
-        display: block; }
-      section div div p {
-        display: inline; }
-      section div div img {
-        height: 25rem; }
-      section div div hr {
-        height: 0.5rem; }
   /* estilos de Productos de mediaquerie*/
   .contenedorpro {
     justify-content: center;
@@ -266,6 +262,10 @@ section {
       grid-area: p;
       padding: 1rem;
       display: inline; }
+  .contenedorsed {
+    width: 60%;
+    height: 25rem;
+    margin: 2rem; }
   /*estilos de nos*/
   .contenedornos {
     flex-direction: row-reverse;
